--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DBUSERNAME=msmith1119
 DBPASSWORD=UI4K5B6KFQaWF01n
 PORT=3002
 DBURI='mongodb+srv://msmith1119:UI4K5B6KFQaWF01n@matthew.kmjpjaw.mongodb.net/realgrande'
+FRONT_URL=http://localhost:3000
